--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.98.0",
     "bcrypt": "^6.0.0",
+    "lucide-react": "^0.575.0",
     "mapbox-gl": "^3.19.0",
     "next": "16.1.6",
     "razorpay": "^2.9.6",
