--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.98.0",
     "bcrypt": "^6.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.575.0",
     "mapbox-gl": "^3.19.0",
     "next": "16.1.6",
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
+    "@types/leaflet": "^1.9.21",
     "@types/mapbox__point-geometry": "^1.0.87",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
