--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lucide-react": "^0.575.0",
     "mapbox-gl": "^3.19.0",
     "next": "16.1.6",
+    "nodemailer": "^8.0.1",
+    "pdf-lib": "^1.17.1",
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -29,6 +31,7 @@
     "@types/mapbox__point-geometry": "^1.0.87",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
